# electrical-flows

./: .clang-format  .gitignore  CMakeLists.txt  README.md  in  in2  out2
round/: .clang-format  CMakeLists.txt  edge.cpp  edge.h  in  matchingEdge.cpp  matchingEdge.h  matchingGraph.cpp  matchingGraph.h  matchingNode.cpp  matchingNode.h  node.h  perfectMatchingFinder.cpp  perfectMatchingFinder.h  randomnessProvider.cpp  randomnessProvider.h  round.cpp
src/: CMakeLists.txt  augmentingPathFinder.cpp  augmentingPathFinder.h  correctionFlow.cpp  correctionFlow.h  demands.cpp  demands.h  dynamicTreeNode.cpp  dynamicTreeNode.h  dynamicTrees.cpp  dynamicTrees.h  edge.cpp  edge.h  electricalFlow.cpp  electricalFlow.h  embedding.cpp  embedding.h  fancyNode.cpp  fancyNode.h  flow.cpp  flow.h  flowCycleDetector.cpp  flowCycleDetector.h  flowEdge.cpp  flowEdge.h  flowNode.cpp  flowNode.h  fractionalSolutionRounder.cpp  fractionalSolutionRounder.h  graph.cpp  graph.h  helpers.hpp  integralFlow.cpp  integralFlow.h  laplacianMatrix.cpp  laplacianMatrix.h  main.cpp  matchingEdge.cpp  matchingEdge.h  matchingGraph.cpp  (+27 more)
src/community-code/: linkcuttree.cpp  linkcuttree.h  splaytree.cpp  splaytree.h
src/ext/: matrix.cpp  system_solver.cpp  system_solver.hpp
test/: in0  in11  in12  in3  in4  in5  in6  in7  in8  in9  in_all  out0  out1  out11  out12  out2  out3  out4  out5  out6  out7  out8  out9  out_all
